# hpc-algorithms

./: README.md
TP1/: CMakeLists.txt  report.md
TP1/src/: utils.hpp
TP1/tests/: cpuid.cpp  dot.cpp  power.cpp  sum.cpp
TP2/: .gitlab-ci.yml  CMakeLists.txt  report.md
TP2/img/: PointerAlignment.drawio
TP2/src/: utils.hpp
TP2/tests/: aligned_malloc.cpp  dot_with_move.cpp  print_av_cores.cpp  print_moves.cpp
TP3/: CMakeLists.txt  registerAllocations.cpp  report.md
TP3/tests/: regexTest.cpp  registerAllocation.cpp
TP4/: .gitignore  CMakeLists.txt  report.md
TP4/tests/: dot.cpp  matmat.cpp
TP5/: CMakeLists.txt  report.md
TP5/src/: utils.hpp
TP5/tests/: dot.cpp  fibonnaci.cpp  simplyparallel.cpp  taskbased.cpp
TP6/: .gitlab-ci.yml  CMakeLists.txt  README.md  report.md
TP6/src/: cuda.h  cudacpu_atomic.h  cudacpu_core.h  cudacpu_error.h  cudacpu_event.h  cudacpu_execcontrol.h  cudacpu_extra.h  cudacpu_mem.h  cudacpu_occupancy.h  cudacpu_peerdeviceaccess.h  cudacpu_stream.h  cudacpu_struct.h  cudacpu_syntax.h  cudacpu_threads.h  cudacpu_unifiedaddressing.h  cudacpu_wrapvote.h
TP6/tests/: distance.cpp  matmat.cpp  sumvalues.cpp
TP6/unit-tests/: CMakeLists.txt  UTester.hpp  utest-idxToPos.cpp
TP7/: .gitignore  .gitlab-ci.yml  report.md
TP7/tests/: memoeff.cpp
TP8/src/: timer.hpp
TP8/tests/: merge_AB.cpp  queue_with_stacks.cpp  stairs.cpp  unique_char.cpp
TP9/: .gitignore  CMakeLists.txt  report.md
TP9/report/: report.bib  report.tex
TP9/tests/: matrix.cpp
